--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: jkahuisman-gif/hugo-quickstart
   branch: main
+
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
