--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,7 +1,12 @@
 backend:
-  name: github
-  repo: jkahuisman-gif/hugo-quickstart # vervang dit door de juiste naam van je repo
-  branch: main
+  name: git-gateway
+  branch: main   # of master, afhankelijk van je repo
+  commit_messages:
+    create: "Create {{collection}} “{{slug}}”"
+    update: "Update {{collection}} “{{slug}}”"
+    delete: "Delete {{collection}} “{{slug}}”"
+    uploadMedia: "[skip ci] Upload “{{path}}”"
+    deleteMedia: "[skip ci] Delete “{{path}}”"
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
